--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,7 @@
 [package]
-name = "php-rpm"
+name = "php"
 version = "0.1.0"
-authors = ["Herman J. Radtke III <herman@hermanradtke.com>"]
+authors = ["Herman J. Radtke III <herman@hermanradtke.com>", "Heinz Gies <heinz@licenser.net>"]
 
 [dependencies]
-log = "0.3"
-env_logger = "0.3"
-clap = "2.26"
-yansi = "0.3"
-hyper = "0.11"
-futures = "0.1"
-futures-cpupool = "0.1"
-php-sys = { version = "0.1", path = "php-sys" }
-num_cpus = "1.6"
-
-[build-dependencies]
-gcc = "0.3"
+php-sys = { version = "7.2.12", path = "php-sys" }
